syntax = "proto3";
package IronPdfEngine.Proto;

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message Empty{}

message HandshakeRequest{
  string expectedVersion = 1;
}

message HandshakeResponse{
  oneof result_or_exception {
    Empty success = 1;
    string requiredVersion = 2;
    RemoteException exception = 3;
  }
}

// Exceptions
message RemoteException{
  string exception_type = 1;
  string message = 2;
  string remote_stack_trace = 3;
  optional RemoteException root_exception = 4;
}

message EmptyResult{
  oneof result_or_exception {
    Empty result = 1;
    RemoteException exception = 2;
  }
}

message BytesResultStream{
  oneof result_or_exception {
    bytes result_chunk = 1;
    RemoteException exception = 2;
  }
}

message IntResult{
  oneof result_or_exception {
    int32 result = 1;
    RemoteException exception = 2;
  }
}


message StringResult{
  oneof result_or_exception {
    string result = 1;
    RemoteException exception = 2;
  }
}

message StringDictionaryEntry {
  string key = 1;
  string value = 2;
}

message StringDictionary{
  repeated StringDictionaryEntry items = 1;
}



